<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Selamat datang di Aplikasi ADD Story ! Temukan kisah-kisah menakjubkan dari berbagai penjuru. Mari bergabung dan jelajahi dunia imajinasi bersama kami.</string>
    <string name="title_welcome_page">Selamat datang di ADD Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita anda?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="exit">Keluar</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gambar_story">gambar story</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="retry">coba lagi</string>
</resources>