<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addStory.AddStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

            <!-- Logo App -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/app_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/navy"
                android:layout_gravity="center"
                />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/preview_img"
        android:contentDescription="@string/gambar_story"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/ic_img"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        style="@style/BtnPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="@id/preview_img"
        app:layout_constraintTop_toBottomOf="@+id/preview_img" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/BtnPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/galery"
        app:layout_constraintEnd_toEndOf="@id/preview_img"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/preview_img" />

    <EditText
        android:id="@+id/tv_description"
        android:autofillHints="default story description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/deskripsi"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_upload"
        style="@style/BtnPrimaryNavy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>